# ChangeLog for dev-ruby/parser
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/parser/ChangeLog,v 1.5 2014/11/04 16:01:22 mrueg Exp $

*parser-2.2.0_pre7 (04 Nov 2014)

  04 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +parser-2.2.0_pre7.ebuild,
  -parser-2.2.0_pre5.ebuild, -parser-2.2.0_pre6.ebuild:
  Version bump. Cleanup old.

*parser-2.2.0_pre6 (03 Nov 2014)

  03 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +parser-2.2.0_pre6.ebuild,
  -parser-2.2.0_pre4.ebuild:
  Version bump. Cleanup old.

*parser-2.2.0_pre5 (04 Oct 2014)

  04 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +parser-2.2.0_pre5.ebuild:
  Version bump.

  04 Sep 2014; Manuel Rüger <mrueg@gentoo.org> parser-2.2.0_pre4.ebuild:
  Fix typo.

*parser-2.2.0_pre4 (04 Sep 2014)

  04 Sep 2014; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +parser-2.2.0_pre4.ebuild:
  Initial commit.