@@ -1,4 +1,6 @@
 DIST parser-2.2.0.pre.7.gem 367104 SHA256 780d886d16674ff492171122f2292bbae72b0dd06d6819c4540f100ef133568c SHA512 67b81720df3d49fadf5c11d3f335c53ba63bb4ef6ec687310473a09d4ec795cacabad444cd1c4a4c4461128975b9ce50bb5589e696a65a8b41c87a014a9fc37c WHIRLPOOL 5f2fae8a368d270e9f31ed5cd7b153c6c38b8700a2a8a9bc98361caa5a3d159f8a5d74eab2738e21a94c7117ff3abc98cea734859aaa85156dc3c769690f8453
+DIST parser-2.2.0.pre.8.gem 367104 SHA256 d430c9f0d958f027aacbc597a7782b861d53267f132eca3d57c05ab3968fea91 SHA512 ecc5898b43a028df5e08c2bf7e518f41df890342a67e349b682033fea270d8222a7d365cc57c31d647aec3070041f0eecc4d54040bcf983b1e67aa66ca7d559f WHIRLPOOL 4456c20014cecba34f1c635abe385fcdee4d5b1ac72dcac113bcecb308e9b817ae7daae9cd366da5aec253caa12e7cdc249dea8ec4ad305cdfa6e960a1e02808
 EBUILD parser-2.2.0_pre7.ebuild 849 SHA256 f01ab59d47ad158440a87c539c87b2fa33b2dce18d53c05c4dd2a3165ff64874 SHA512 b6470ca80c2b03a167884ce80bce4ece789247f13c28ec4bfae606808f5798b710ca607c2a5750c23684bbf03745982c9c97d05789a262ce6ec1dd2266a751f9 WHIRLPOOL df08f409f18240adbe8cef6eafe3dc1b30e1c96d60e8b54ff07fb16933e1673842b632d4efee14e02fe5fba3de57b71195274ad8ad1cba4a2388e50bffc91954
-MISC ChangeLog 922 SHA256 71acdfce040b6d0de247174c165de4a0b2478d71bd8163d616f1ed9b3d641780 SHA512 d4e8a7af40bb25586617c27ed8af66a9f0c1460be23981f6ba6d28bef56b78aead291c21450f79af4258dc30bb7a6cd2f62554ab7894c7705d346ce2324a00bb WHIRLPOOL ea443068fb204d16c7d0e52460549c3774202c969e1117e425269f4642ce21b5dfd45d0dee08ca8e9198052e7b4e3bd04b99ce2084b07e99e826be2cbcb2be96
+EBUILD parser-2.2.0_pre8.ebuild 849 SHA256 b6e0d5ac4382bc4f7bc431459b8597677ef2f210d469fe0b93acba547b955c7f SHA512 9d8cb56957a0a9ac5c6cca79a174258bec45230730b4dea9d77988f61aac82f0f623d24af6844548587370e7fce380fbd1cae5928bcd3223eafb5ba7a53f2fc4 WHIRLPOOL 187f3a17f864eee89d987cc66c58e61a1c10c2e597108dda52f627dc8744cfcbc9bc04d1bc86c5f6c8c167be127dcf8a4754fc5957761b44cdc20b61689974e3
+MISC ChangeLog 1061 SHA256 9e1396ab3d16d708aab8c7062bef7bc02380db606f07da77d88e846274f5af82 SHA512 506cdb215c7507e8bf4f5391861772a67448c56d1c114f681666f2afd17a97005d60b15d9e5f05176c618b4bcb77dc7c592a215d473d4733b2a656eb0c378383 WHIRLPOOL a9478a0528ebce42f20830c506d41e3ba54d6ff13281a7a145753ff7391651d601b7bc2b81e27d334ed77f8402a4df3c081c63b53fa03dab15658676c0c45e6e
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
